# Better-Guitar-Tuner

./: .gitignore  CMakeLists.txt  README.md
apps/flutter_app/: README.md  pubspec.yaml
apps/flutter_app/android/app/: build.gradle.kts
apps/flutter_app/android/app/src/main/: AndroidManifest.xml
apps/flutter_app/android/app/src/main/kotlin/com/example/better_guitar_tuner/: MainActivity.kt
apps/flutter_app/ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
apps/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter_app/lib/: main.dart
apps/flutter_app/lib/app/: better_guitar_tuner_app.dart
apps/flutter_app/lib/features/tuner/models/: audio_bridge_diagnostics.dart  pitch_frame.dart  tuner_settings.dart  tuning_mode.dart  tuning_preset.dart  tuning_result.dart
apps/flutter_app/lib/features/tuner/screens/: tuner_screen.dart
apps/flutter_app/lib/features/tuner/services/: asset_tuning_preset_repository.dart  audio_bridge_service.dart  desktop_process_audio_bridge_service.dart  desktop_process_audio_bridge_service_io.dart  desktop_process_audio_bridge_service_stub.dart  desktop_runner_command_builder.dart  desktop_runner_output_decoder.dart  desktop_runner_session.dart  desktop_runtime_locator.dart  mock_audio_bridge_service.dart  native_audio_bridge_contract.dart  native_audio_bridge_service.dart  tuning_preset_repository.dart
apps/flutter_app/lib/features/tuner/view_models/: tuner_ui_behavior_profile.dart  tuner_view_model.dart  tuning_result_stabilizer.dart
apps/flutter_app/lib/features/tuner/widgets/: cents_meter.dart  status_badge.dart  tuner_panels.dart
apps/flutter_app/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
apps/flutter_app/linux/: CMakeLists.txt
apps/flutter_app/linux/runner/: my_application.cc
apps/flutter_app/macos/Runner.xcodeproj/: project.pbxproj
apps/flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
apps/flutter_app/test/: desktop_runner_command_builder_test.dart  desktop_runner_output_decoder_test.dart  desktop_runtime_locator_test.dart  tuning_result_stabilizer_test.dart  widget_test.dart
apps/flutter_app/web/: index.html  manifest.json
apps/flutter_app/windows/: CMakeLists.txt
apps/flutter_app/windows/runner/: Runner.rc  main.cpp
docs/: api_contract.md  architecture.md  roadmap.md  testing.md
modules/dsp_core/: CMakeLists.txt  README.md
modules/dsp_core/include/dsp_core/: pitch_detector.h  pitch_utils.h
modules/dsp_core/src/: pitch_detector.cpp  pitch_utils.cpp
modules/dsp_core/tests/: dsp_core_tests.cpp
modules/tuning_config/: README.md
modules/tuning_config/presets/: drop_d.json  standard_guitar.json  tuning_presets.json
modules/tuning_engine/: CMakeLists.txt  README.md
modules/tuning_engine/include/tuning_engine/: preset_loader.h  tuner.h  tuning_types.h
modules/tuning_engine/src/: preset_loader.cpp  tuner.cpp
modules/tuning_engine/tests/: preset_loader_tests.cpp  tuning_engine_tests.cpp  tuning_pipeline_tests.cpp
platform/ios/: README.md
platform/ios/Sources/: AudioCaptureBridge.swift  FlutterTunerBridge.swift  NativeTuningProcessorBridge.h  NativeTuningProcessorBridge.mm
tools/mic_debug_runner/: CMakeLists.txt  README.md
tools/mic_debug_runner/src/: capture_process.cpp  capture_process.h  main.cpp  runner_config.cpp  runner_config.h  runner_loop.cpp  runner_loop.h  runner_output.cpp  runner_output.h
tools/mic_debug_runner/tests/: runner_output_tests.cpp
tools/wav_debug_runner/: CMakeLists.txt  README.md
tools/wav_debug_runner/src/: main.cpp
